--- a/CLIENT/client/src/Pages/App.css
+++ b/CLIENT/client/src/Pages/App.css
@@ -16,23 +16,20 @@ html, body, #root {
 }
 .logo_frame{
     display: block;
-    height: 250px; /* Fixed height */
-    width: 250px;  /* Fixed width */
+    height: 230px; /* Fixed height */
+    width: 240px;  /* Fixed width */
     margin-left: auto;
     margin-right: auto;
-}
-.explore_button{
-    margin-left: auto;
-    margin-right: auto;
-    border: 3px #C2D111;
-    padding: 3px 3px;
-    font-size: 16px;
+    position: absolute;
+    top: 100px;
+    left: 765px;
 }
 
-.explore-button{
+
+.explore_button{
     background-color: #C2D111;
     border-color: #C2D111;
-    color: #C2D111;
+    color: #ffffff;
     font-style: italic;
     font-weight: 150; /* 100 is typically the numeric value for 'thin' */
     border-width: 1px;
@@ -42,21 +39,31 @@ html, body, #root {
     padding-right:15px;
     padding-top: 9px;
     padding-bottom: 9px;
-    margin-left: 633px;
-    margin-right: auto;
-    margin-top: 250px;
+    vertical-align: top;
+    margin-left: 50px;
+    margin-right: 50px;
     background-color: transparent;
+    position: absolute;
+    left: 765px;
+    top:550px;
+
+
     
 }
-.explore-button:focus{
+.explore_button:focus{
     outline: none; /* Removes default focus outline */
     border-color: #C2D111; /* Keeps the border color consistent */
 }
-.explore-button:hover{
+.explore_button:hover{
     padding-right:25px;
     padding-left:25px;
     margin-left:40px;
     margin-right:40px;
-
+    color:#ffffff;
+    text-shadow: 0 0 15px #ffffff,
+                 0 0 40px #ffffff;
+    
 }
+
+
 
