--- a/CLIENT/client/src/Pages/LoginPage/LoginPage.css
+++ b/CLIENT/client/src/Pages/LoginPage/LoginPage.css
@@ -5,14 +5,13 @@
     justify-content: flex-end;
     padding: 40px, 40px;
     background: linear-gradient(to top left, #FFFFFF 60%, #8D8FA4 40%);
-
     min-width: 1532px;
 }
 .login-panel{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width:20%;
+    width:22%;
     padding: 200px;
  
 }
@@ -36,7 +35,7 @@
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 15px;
-    padding-top: 25px;
+    padding-top: 10%;
 }
 
 .login-form{
