--- a/CLIENT/client/src/Pages/HomePage/HomePage.css
+++ b/CLIENT/client/src/Pages/HomePage/HomePage.css
@@ -2,10 +2,11 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    background: linear-gradient(to top left, #FFFFFF 95%, #75809C 5%);
+    background: linear-gradient(to top left, #faf5ef 95%, #75809C 5%);
     flex-direction: column;
     gap:10px;
     min-width: 1532px;
+
   }
 
 .header{
@@ -15,7 +16,6 @@
 
 .panel{
   display: flex;
-
   justify-content: space-evenly;
   height: 85%;
 }
@@ -27,6 +27,9 @@
   min-width: 45%;
   margin:30px;
   height: 100%;
+  /* animation: fadeIn 3s; */
+  animation-delay: 2s; /* Starts after the first element finishes */
+
 }
 
 .right-panel{
@@ -36,6 +39,8 @@
   min-width: 45%;
   height: 100%;
   margin: 30px;
+  /* animation: fadeIn 3s; */
+  animation-delay: 2s; /* Starts after the first element finishes */
 }
 
 .middle-panel{
@@ -59,7 +64,8 @@
   height: 1px;
   width: 100%;
   border: none; 
-  border-top: 1px solid #586D80; 
+  border-top: 1px solid #586D80;
+  animation: horizontal-spread 1s; 
 }
 
 
@@ -137,7 +143,7 @@
 
 .weather-panel h1{
   font-weight: 100;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Arial, 'Times New Roman', Times, serif;
   font-size: 12pt;
 }
 
@@ -157,3 +163,20 @@
   font-size: 12pt;
 }
   
+@keyframes fadeIn {
+  0%{
+    opacity:0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+
+@keyframes horizontal-spread {
+  0%{
+    width:0%
+  }
+  100%{
+    width: 100%;
+  }
+}
