--- a/CLIENT/src/Pages/Demo/DemoPage.css
+++ b/CLIENT/src/Pages/Demo/DemoPage.css
@@ -3,5 +3,24 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+}
 
+
+.info-block {
+    position: absolute;
+    right: 0%;
+    display: flex;
+    opacity: 60%;
+    flex-direction: column;
+    height: 50%;
+    max-width: 25%;
+    min-width: 20%;
+    background-image: url("../../assets/Info_Block_Background.png");
+    font-size: medium;
+}
+
+.info-line{
+    margin-left: 0.5%;
+    margin-top: 1%;
+    color: rgb(229, 214, 214);
 }
